--- a/package.json
+++ b/package.json
@@ -34,5 +34,12 @@
     "prettier": "^3.2.4",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3"
-  }
+  },
+  "keywords": [
+    "automation",
+    "developer-tools",
+    "productivity",
+    "open-source",
+    "viral"
+  ]
 }
